Add official PDF documents
